# django-inventory-flow

./: .dockerignore  .gitignore  Dockerfile  README.md  anything.js  docker-compose.yml  pyproject.toml
src/authentication/: urls_api.py
src/brands/: admin.py  forms.py  models.py  urls.py  urls_api.py  views.py
src/brands/migrations/: 0001_initial.py
src/brands/templates/brands/: brand-create.html  brand-detail.html  brand-list.html
src/categories/: admin.py  forms.py  models.py  urls.py  urls_api.py  views.py
src/categories/migrations/: 0001_initial.py
src/categories/templates/categories/: category-detail.html  category-list.html
src/core/: metrics.py  permissions.py  settings.py  urls.py  urls_api.py  views.py
src/core/templates/: base.html
src/core/templates/core/: base.html  home.html  login.html
src/inflows/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  urls_api.py  views.py
src/inflows/migrations/: 0001_initial.py
src/inflows/templates/inflows/: inflow-list.html
src/outflows/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  urls_api.py  views.py
src/outflows/migrations/: 0001_initial.py
src/outflows/templates/inflows/: inflow-detail.html
src/outflows/templates/outflows/: outflow-detail.html  outflow-list.html
src/products/: admin.py  forms.py  models.py  urls.py  urls_api.py  views.py
src/products/migrations/: 0001_initial.py
src/products/templates/products/: product-detail.html  (+1 more)
src/suppliers/: admin.py  forms.py  models.py  urls.py  urls_api.py  views.py
src/suppliers/migrations/: 0001_initial.py
(+40 files in other folders)
